--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   baseflow_plugin_template: ^2.1.1
   flutter_config: ^2.0.0
   provider: ^6.0.5
+  flutter_native_splash: ^2.2.19
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+assets:
+  - assets/aplash/splash.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
