--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_config: ^2.0.0
   provider: ^6.0.5
   flutter_native_splash: ^2.2.19
+  weather_icons: ^3.0.0
 
 dev_dependencies:
   flutter_test:
