--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,4 +1,4 @@
 flutter_native_splash:
   color: "#FFFFFF"
-  image: assets/splash/splash.jpg
+  image: assets/splash/splash.png
   fullscreen: true
