--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  geolocator: ^9.0.1 #gps 라이브러리
-  http: ^0.13.6 #http 통신 라이브러리
-  intl: ^0.17.0 #날짜/숫자 형식 지정 라이브러리
+  geolocator: ^9.0.1 #gps 패키지
+  http: ^0.13.6 #http 통신 패키지
+  intl: ^0.17.0 #날짜/숫자 형식 지정 패키지
   flutter_config: ^2.0.0
   provider: ^6.0.5 #클래스 구독 / 단순화된 stateful갱신
   flutter_native_splash: ^2.2.19 #스플래시 스크린
